# MA35D1_Linux_Applications

./: .gitignore
GC520L_2D_API_Examples/: Dirs  LICENSE.txt  VERSION  common.node  common.target  config.bat  gchal.bib  gchal.cec  gchal.reg  ma35d1_GC520L_test.txt  makefile.linux  makefile.linux.def  makefile.linux.def.tst  makefile.linux.tst  sources.cmn  test_build_sample.sh  test_build_sample.sh.org  test_build_sample_fb.sh  wince_install.inc
GC520L_2D_API_Examples/release/SW/: ReadMe_Android.txt  ReadMe_Linux.txt  ReadMe_Linux_SDK.txt  ReadMe_WinCE.txt  ReadMe_WinCE_SDK.txt  test_build_sample_dfb.sh  test_build_sample_x11.sh
GC520L_2D_API_Examples/sdk/: dirs  makefile.linux
GC520L_2D_API_Examples/sdk/inc/: gc_sdk.h
GC520L_2D_API_Examples/sdk/include/: gc_hal.h  gc_hal_base.h  gc_hal_debug_zones.h  gc_hal_driver.h  gc_hal_dump.h  gc_hal_enum.h  gc_hal_mem.h  gc_hal_metadata.h  gc_hal_options.h  gc_hal_priv.h  gc_hal_profiler.h  gc_hal_raster.h  gc_hal_types.h  gc_hal_version.h
GC520L_2D_API_Examples/sdk/samples/: dirs  makefile.linux
GC520L_2D_API_Examples/sdk/samples/hal/: dirs  makefile.linux  makefile.linux.def  makefile.linux.org
GC520L_2D_API_Examples/sdk/samples/hal/unit_test/: 1024_600_A8R8G8B8_DEFAULT.ini  Runall.bat  runtest.sh
GC520L_2D_API_Examples/sdk/samples/hal/unit_test/resource/: Boston_YV12_640x480_Linear.vimg  Crew_NV16_1280x720_Linear.vimg  Crew_NV21_1280x720_Linear.vimg  SuperTileV1_640x320_X8R8G8B8.vimg  Test_I420_1920x1440_Linear.vimg  font_A8_2048x100.vimg  full_1920x1088_yuv420semiplannar.yuv  img_texture2_multisupertile.vimg  img_texture2_multitile.vimg  rects_A8R8G8B8_640x640_Multi_SuperTileV2.vimg  rects_A8R8G8B8_640x640_Multi_SuperTileV3.vimg  rects_A8R8G8B8_640x640_SuperTileV2.vimg  source_YUV420_152x152_Linear.vimg  source_YUV420_184x184_Linear.vimg  source_YUV420_400x400_Linear.vimg  source_YUV420_88x88_Linear.vimg  texture2_cc0_A8R8G8B8.vimg  texture2_cc0_R5G6B5.vimg  texture2_cc1_A4R4G4B4.vimg  texture2_cc1_R5G6B5.vimg  texture5_cc0_R5G6B5.vimg  texture5_cc1_R5G6B5.vimg  zero2_NV12_10BIT.vimg  zero2_NV16_10BIT.vimg  zero2_YUV420_640X480_Linear.vimg  zero2_YVYU_640X480_Linear.vimg
GC520L_2D_API_Examples/sdk/source/: dirs  gc_sdk_internal.h  gc_sdk_internal_linux.h  gc_sdk_internal_windows.h  gc_sdk_misc_linux.c  gc_sdk_misc_windows.c  gc_sdk_startup_linux.c  gc_sdk_startup_windows.c  gc_sdk_thread_linux.c  gc_sdk_thread_windows.c  gc_sdk_visual.c  gc_sdk_visual_fbdev.c  gc_sdk_visual_gdi.c  gc_sdk_visual_x.c  makefile.linux
GC520L_2D_API_Examples/sdk/source/cebuild/: sources
GC520L_2D_API_Examples/test/: Android.mk  Dirs
GC520L_2D_API_Examples/test/common/: dirs
GC520L_2D_API_Examples/test/common/libtime/: makefile  sources  time.c
GC520L_2D_API_Examples/test/hal/: Android.mk  Dirs
GC520L_2D_API_Examples/test/hal/common/UnitTest/: Android.mk  README  dirs  makefile.linux  makefile.linux.def
GC520L_2D_API_Examples/test/hal/common/UnitTest/config/: run.bat
GC520L_2D_API_Examples/test/hal/common/UnitTest/galRunTest2/: Android.mk  dirs  galRunTest2.c  gutsystem.c  gutsystem.h  makefile.linux
GC520L_2D_API_Examples/test/hal/common/UnitTest/galUtil/: Android.mk  galUtil.c  galUtil.c.20220103  galUtil.c.org  galUtilOS.c  makefile.linux  makefile.linux.def
GC520L_2D_API_Examples/test/hal/common/UnitTest/inc/: galUtil.h
GC520L_2D_API_Examples/test/hal/common/UnitTest/resource/: Crew_NV61_1280x720_Linear.vimg  SuperTileV2_640x320_X8R8G8B8.vimg  SuperTileV3_640x320_X8R8G8B8.vimg  font_A8_1280x720.raw  img_texture2_supertile.vimg  rects_A8R8G8B8_640x640_Multi_SuperTileV1.vimg  rects_A8R8G8B8_640x640_Multi_Tile.vimg  rects_A8R8G8B8_640x640_SuperTileV1.vimg  rects_A8R8G8B8_640x640_SuperTileV3.vimg  rects_A8R8G8B8_640x640_Tile.vimg  smooth_YUY2_592X400_Linear.vimg  source_YUV420_104x104_Linear.vimg  source_YUV420_120x120_Linear.vimg  source_YUV420_136x136_Linear.vimg  source_YUV420_168x168_Linear.vimg  source_YUV420_216x216_Linear.vimg  source_YUV420_232x232_Linear.vimg  source_YUV420_264x264_Linear.vimg  texture2_cc0_A4R4G4B4.vimg  texture2_cc0_X8R8G8B8.vimg  texture2_cc1_A8R8G8B8.vimg  (+9 more)
crypto/: crypto.c  if_alg.h
crypto-ioctl/: Makefile  crypto-ioctl.c
examples/cpu-freq/: Makefile  cpu-freq  cpu-freq.c
examples/crypto/: Makefile  crypto.c  crypto.c~  if_alg.h
examples/crypto-ioctl/: crypto-ioctl.c
examples/ebi/: Makefile  ebi.c  nua3500-ebi.h
examples/key-store/: ks_demo.c  ma35d1_ks.h
examples/keypad/: Makefile  keypad.c
examples/rpmsg/: rpmsg.c
examples/rtc/: Makefile
examples/temp_ctrl/: Makefile  temp_ctrl  temp_ctrl.c
examples/timer/: Makefile  nua3500-timer.h  timer.c
examples/trng/: Makefile  trng.c
examples/uart/: Makefile  uart.c
examples/vc8000-h264/: Makefile  common.h  dcfb.h  main.c  msm-v4l2-controls.h  parser.c  parser.h  video.c
examples/vc8000-jpeg/: Makefile  main.c
ks/: Makefile  ks_demo.c  ma35d1_ks.h
machine_learning/: ReadMe.md  buildall_aarch64.sh  buildall_x86.sh
machine_learning/faceEnrollment/: CMakeLists.txt  RecognitionModel.cc  RecognitionModel.h  build_aarch64.sh  build_x86.sh  main.cc
machine_learning/faceRecognition/: CMakeLists.txt  RecognitionModel.cc  RecognitionModel.h  build_aarch64.sh  build_x86.sh  main.cc
machine_learning/faceRecognition/label/: face_label.txt
machine_learning/faceRecognition/model/: mobilenet_fr_float.tflite  mobilenet_fr_int8.tflite
machine_learning/objectDetect/: CMakeLists.txt  ObjectDetModel.cc  ObjectDetModel.h  PlatformMath.cc  PlatformMath.h  YoloConfig.h  YoloDetectionResult.h  YoloPostProcessing.cc  YoloPostProcessing.h  build_aarch64.sh  build_x86.sh  main.cc
machine_learning/objectDetect/model/: mobilenetv3_ssd_float.tflite  yolo-fastest_float32.tflite
machine_learning/opencv-lib/: build_aarch64.sh  build_x86.sh  pack.sh  target_opencv_install.sh
machine_learning/tensorflow-lib/: build_aarch64.sh  build_x86.sh
rpmsg/: Makefile  rpmsg.c
thermal_demo/: Makefile  thermal_demo.c
trng/: trng.c
vc8000-h264/: Makefile  Makefile.poky  args.c  fileops.c  video.h
vc8000-jpeg/: Makefile  main.c
(+1535 files in other folders)
